--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
 
             <div class="stats-bar">
                 <div class="stat-item">
-                    <span class="stat-value">5K+</span>
+                    <span class="stat-value">2K+</span>
                     <span class="stat-label">Người dùng</span>
                 </div>
                 <div class="stat-item">
@@ -81,12 +81,12 @@
                     <h3 class="feature-title">Ping Optimizer</h3>
                     <p class="feature-desc">Giảm độ trễ mạng, ổn định kết nối. Combo mượt mà không lo lag spike.</p>
                 </div>
-                <!-- <div class="feature-card">
+                <div class="feature-card">
                     <div class="icon-box">🛡️</div>
                     <h3 class="feature-title">An Toàn Tuyệt Đối</h3>
                     <p class="feature-desc">Hoạt động độc lập, không inject vào game. Đảm bảo an toàn cho tài khoản của
                         bạn.</p>
-                </div> -->
+                </div>
             </div>
         </section>
 
