--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FourT Helper - Tool Hỗ Trợ Where Winds Meet Đỉnh Cao</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>FourT Helper</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel=" preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -13,6 +14,14 @@
 </head>
 
 <body>
+    <!-- Language Toggle -->
+    <div class="lang-toggle-container">
+        <button id="langToggle" class="lang-toggle" title="Switch Language">
+            <span class="flag-en">🇺🇸</span>
+            <span class="flag-vi active">🇻🇳</span>
+        </button>
+    </div>
+
     <!-- Background Elements -->
     <div class="bg-wrapper">
         <div class="grid-overlay"></div>
@@ -25,14 +34,16 @@
 
     <div class="container feature-wrapper">
         <section class="hero">
-            <div class="hero-logo">4T</div>
+            <div class="hero-logo-container">
+                <div class="lightning-effect"></div>
+                <img src="/favicon.ico" alt="FourT Logo" class="hero-logo">
+            </div>
             <h1 class="hero-title">
-                Chinh Phục<br>
-                <span class="text-gradient">Where Winds Meet</span>
+                <span data-i18n="hero_title_1">Chinh Phục</span><br>
+                <span class="text-gradient" data-i18n="hero_title_2">Where Winds Meet</span>
             </h1>
-            <p class="hero-subtitle">
-                Tools hỗ trợ toàn diện: Macro combo, Auto đàn, Tối ưu Ping.
-                Được thiết kế để nâng tầm trải nghiệm game của bạn.
+            <p class="hero-subtitle" data-i18n="hero_description">
+                Công cụ tự động hóa mạnh mẽ giúp bạn làm chủ WWM. Dễ sử dụng, nhanh và hiệu quả.
             </p>
 
             <a href="/download/installer" class="cta-button">
@@ -44,57 +55,59 @@
                         <polyline points="7 10 12 15 17 10"></polyline>
                         <line x1="12" y1="15" x2="12" y2="3"></line>
                     </svg>
-                    <span>Tải Ngay (v1.4.4)</span>
+                    <span data-i18n="cta_button">Tải Ngay</span>
                 </div>
             </a>
 
             <div class="stats-bar">
                 <div class="stat-item">
-                    <span class="stat-value">2K+</span>
-                    <span class="stat-label">Người dùng</span>
+                    <span class="stat-value" id="user-count"></span>
+                    <span class="stat-label" data-i18n="users_text">người dùng</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-value">99%</span>
-                    <span class="stat-label">An toàn</span>
+                    <span class="stat-label" data-i18n="stat_safe">An toàn</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-value">24/7</span>
-                    <span class="stat-label">Hỗ trợ</span>
+                    <span class="stat-label" data-i18n="stat_support">Hỗ trợ</span>
                 </div>
             </div>
 
             <div class="features">
                 <div class="feature-card">
                     <div class="icon-box">⚡</div>
-                    <h3 class="feature-title">Macro Combo</h3>
-                    <p class="feature-desc">Thực hiện chuỗi chiêu thức phức tạp chỉ với một phím bấm. Tùy chỉnh delay
-                        cực chuẩn.</p>
+                    <h3 class="feature-title" data-i18n="feature_macro_title">Macro Combo</h3>
+                    <p class="feature-desc" data-i18n="feature_macro_desc">Thực hiện chuỗi chiêu thức phức tạp chỉ với
+                        một phím bấm. Tùy chỉnh delay cực chuẩn.</p>
                 </div>
                 <div class="feature-card">
                     <div class="icon-box">🎹</div>
-                    <h3 class="feature-title">Auto Đánh Đàn</h3>
-                    <p class="feature-desc">Tự động chơi bất kỳ bài nhạc nào từ file MIDI. Trở thành nghệ sĩ thực thụ
-                        trong game.</p>
+                    <h3 class="feature-title" data-i18n="feature_piano_title">Auto Đánh Đàn</h3>
+                    <p class="feature-desc" data-i18n="feature_piano_desc">Tự động chơi bất kỳ bài nhạc nào từ file
+                        MIDI. Trở thành nghệ sĩ thực thụ trong game.</p>
                 </div>
                 <div class="feature-card">
                     <div class="icon-box">🚀</div>
-                    <h3 class="feature-title">Ping Optimizer</h3>
-                    <p class="feature-desc">Giảm độ trễ mạng, ổn định kết nối. Combo mượt mà không lo lag spike.</p>
+                    <h3 class="feature-title" data-i18n="feature_ping_title">Ping Optimizer</h3>
+                    <p class="feature-desc" data-i18n="feature_ping_desc">Giảm độ trễ mạng, ổn định kết nối. Combo mượt
+                        mà không lo lag spike.</p>
                 </div>
                 <div class="feature-card">
                     <div class="icon-box">🛡️</div>
-                    <h3 class="feature-title">An Toàn Tuyệt Đối</h3>
-                    <p class="feature-desc">Hoạt động độc lập, không inject vào game. Đảm bảo an toàn cho tài khoản của
-                        bạn.</p>
+                    <h3 class="feature-title" data-i18n="feature_safe_title">An Toàn Tuyệt Đối</h3>
+                    <p class="feature-desc" data-i18n="feature_safe_desc">Hoạt động độc lập, không inject vào game. Đảm
+                        bảo an toàn cho tài khoản của bạn.</p>
                 </div>
             </div>
         </section>
 
         <footer class="footer">
-            <p>© 2024 FourT Studio. Made with ❤️ for Gamers.</p>
+            <p>© 2025 FourT Studio. Made with ❤️ for Gamers.</p>
         </footer>
     </div>
 
+    <script src="/i18n.js"></script>
     <script src="script.js"></script>
 </body>
 
