--- a/server/web/index.html
+++ b/server/web/index.html
@@ -154,12 +154,12 @@
                 <p class="feature-desc" data-i18n="feature_piano_desc">Chơi bất kỳ bài nhạc nào từ file
                     MIDI. Trải nghiệm âm nhạc trong game một cách tuyệt vời.</p>
             </div>
-            <div class="feature-card">
+            <!-- <div class="feature-card">
                 <div class="icon-box">🚀</div>
                 <h3 class="feature-title" data-i18n="feature_ping_title">Network Optimizer</h3>
                 <p class="feature-desc" data-i18n="feature_ping_desc">Giảm độ trễ mạng, ổn định kết nối. Trải nghiệm
                     mượt mà không lo lag.</p>
-            </div>
+            </div> -->
             <div class="feature-card">
                 <div class="icon-box">🛡️</div>
                 <h3 class="feature-title" data-i18n="feature_safe_title">An Toàn Tuyệt Đối</h3>
