--- a/server/web/community/404.html
+++ b/server/web/community/404.html
@@ -33,6 +33,7 @@
             line-height: 1;
             background: linear-gradient(135deg, #a855f7, #ec4899);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             margin-bottom: 20px;
             animation: pulse 3s infinite;
